--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@
 envlist = py36,py37,py38
 
 # Tell tox to not require a setup.py file
-;skipsdist = True
+# skipsdist = True
 
 [testenv]
 deps = -r requirements.txt
