--- a/mypy.ini
+++ b/mypy.ini
@@ -26,3 +26,9 @@ ignore_missing_imports = True
 
 [mypy-aiologger.*]
 ignore_missing_imports = True
+
+[mypy-motor.*]
+ignore_missing_imports = True
+
+[mypy-motor.motor_asyncio.*]
+ignore_missing_imports = True
