--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-lxml
+motor
 aiohttp==3.6.2
+aiologger==0.5.0
 astroid==2.3.3
+async-timeout==3.0.1
 attrs==19.3.0
 chardet==3.0.4
 filelock==3.0.12
@@ -8,6 +10,7 @@ idna==2.8
 isort==4.3.21
 lazy-object-proxy==1.4.3
 logzero==1.5.0
+lxml==4.4.2
 mccabe==0.6.1
 more-itertools==8.0.2
 multidict==4.7.2
@@ -28,4 +31,3 @@ virtualenv==16.7.9
 wcwidth==0.1.7
 wrapt==1.11.2
 yarl==1.4.2
-aiologger
