--- a/mypy.ini
+++ b/mypy.ini
@@ -32,3 +32,12 @@ ignore_missing_imports = True
 
 [mypy-motor.motor_asyncio.*]
 ignore_missing_imports = True
+
+[mypy-aiohttp.*]
+ignore_missing_imports = True
+
+[mypy-aiofiles.*]
+ignore_missing_imports = True
+
+[mypy-setuptools.*]
+ignore_missing_imports = True
