--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aiofiles
 motor
 aiohttp==3.6.2
 aiologger==0.5.0
@@ -24,7 +25,7 @@ pyparsing==2.4.5
 pytest==5.3.2
 six==1.13.0
 toml==0.10.0
-tox==3.14.2
+tox==3.14.3
 typed-ast==1.4.0
 typing-extensions==3.7.4.1
 virtualenv==16.7.9
