--- a/mypy.ini
+++ b/mypy.ini
@@ -41,3 +41,7 @@ ignore_missing_imports = True
 
 [mypy-setuptools.*]
 ignore_missing_imports = True
+
+[mypy-user_agent.*]
+ignore_missing_imports = True
+
